update field register, payment